--- a/Assignmnet3/templates/success.html
+++ b/Assignmnet3/templates/success.html
@@ -4,6 +4,7 @@
     <title>Success</title>
 </head>
 <body>
-    <h2>You are Beautiful❤️ </h2>
+    <h2>YData submitted successfully</h2>
 </body>
 </html>
+
